Use Source Sans Pro font for cyrillic characters

--- a/page.css
+++ b/page.css
@@ -16,6 +16,11 @@
     font-weight: 400;
 }
 
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('files/fonts/source_sans_pro.woff') format('woff');
+}
+
 * {
     box-sizing: border-box;
 }
